--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My First Ever Git Repo</title>
 </head>
 <body>
-
+    <h3>This is the beginning</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus deleniti odio corporis pariatur! Nam in sapiente ducimus tenetur atque neque eaque pariatur. Aspernatur harum accusamus iste quo earum incidunt maxime.</p>
 </body>
 </html>
